[gd_scene load_steps=5 format=2]

[ext_resource path="res://core/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/world/World.gd" type="Script" id=2]
[ext_resource path="res://core/sounds/OST.ogg" type="AudioStream" id=3]

[sub_resource type="LineShape2D" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="TimerDifficulty" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="TimerPowerups" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label_PlayerHealth" type="Label" parent="Control"]
margin_left = 460.0
margin_top = 560.0
margin_right = 500.0
margin_bottom = 600.0
text = "HEALTH: 5"

[node name="Label_DifficultyIncrease" type="Label" parent="Control"]
margin_right = 40.0
margin_bottom = 14.0

[node name="TimerSpawnEnemy" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 499, 0 )
stream = ExtResource( 3 )
volume_db = -31.292
pitch_scale = 0.7
autoplay = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -18, 37 )
rotation = 1.57079
scale = Vector2( 6.32, 1 )
shape = SubResource( 1 )

[connection signal="timeout" from="TimerDifficulty" to="." method="_on_TimerDifficulty_timeout"]
[connection signal="timeout" from="TimerPowerups" to="." method="_on_TimerPowerups_timeout"]
[connection signal="timeout" from="TimerSpawnEnemy" to="." method="_on_TimerSpawnEnemy_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
